@@ -4,15 +4,25 @@
         "layer0": "minecraftbyexample:items/mbe10_item_simple_icon"
     },
     "display": {
-        "thirdperson": {
-            "rotation": [ -90, 0, 0 ],
-            "translation": [ 0, 1, -3 ],
-            "scale": [ 0.55, 0.55, 0.55 ]
-        },
-        "firstperson": {
-            "rotation": [ 0, -135, 25 ],
-            "translation": [ 0, 4, 2 ],
-            "scale": [ 1.7, 1.7, 1.7 ]
-        }
+      "thirdperson_righthand": {
+        "rotation": [ 0, -90, 55 ],
+        "translation": [ 0, 4.0, 0.5 ],
+        "scale": [ 0.85, 0.85, 0.85 ]
+      },
+      "thirdperson_lefthand": {
+        "rotation": [ 0, 90, -55 ],
+        "translation": [ 0, 4.0, 0.5 ],
+        "scale": [ 0.85, 0.85, 0.85 ]
+      },
+      "firstperson_righthand": {
+        "rotation": [ 0, -90, 25 ],
+        "translation": [ 1.13, 3.2, 1.13 ],
+        "scale": [ 0.68, 0.68, 0.68 ]
+      },
+      "firstperson_lefthand": {
+        "rotation": [ 0, 90, -25 ],
+        "translation": [ 1.13, 3.2, 1.13 ],
+        "scale": [ 0.68, 0.68, 0.68 ]
+      }
     }
 }
